# CplusyAIT

./: BENCHMARKS.md  Cargo.toml  Dockerfile  HOWTO.md  README.md  build.rs  convert.bat  convert.sh  demo.ipynb
.github/workflows/: ci.yml  docker.yml
docs/: GPU_RESEARCH.md  RESEARCH_ARCHITECTURE.md
kernels/: cpu_ternary_gemm.cpp  cpu_ternary_gemm_avx2.cpp  cpu_ternary_gemm_neon.cpp  flash_msa.cu  fp32_gemm.cpp  gpu_ternary_gemm.cu  memory_paging.cpp  msa_router.cpp
scripts/: download_model.py  quantize_gptq.py
src/: ffi.rs  lib.rs  main.rs
src/benchmark/: continuous.rs  data.rs  embedding.rs  mod.rs  ste.rs
src/core/: attention.rs  checkpoint.rs  infer.rs  mamba.rs  mod.rs  train.rs
src/inference/: chat_template.rs  format.rs  generate.rs  kv_cache.rs  mamba.rs  mod.rs  sampler.rs  ternary_linear.rs  tokenizer.rs  transformer.rs
src/memory/: mod.rs  paging.rs
