[package]
name = "cpu_ai_framework"
version = "0.1.0"
edition = "2021"
description = "A next-generation AI training and inference framework for CPU-bound local LLMs"

[dependencies]
candle-core = "0.9.2"
candle-nn = "0.9.2"
libc = "0.2"
memmap2 = "0.9.10"
rand = "0.8.5"
rayon = "1.8" # For thread pool orchestration
safetensors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0"
