[package]
name = "cpu_ai_framework"
version = "0.1.0"
edition = "2021"
description = "A next-generation AI training and inference framework for CPU-bound local LLMs"

[dependencies]
candle-core = "0.9.2"
candle-nn = "0.9.2"
dialoguer = "0.12.0"
indicatif = "0.18.4"
libc = "0.2"
memmap2 = "0.9.10"
rand = "0.8.5"
rayon = "1.8" # For thread pool orchestration
safetensors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]

[build-dependencies]
cc = "1.0"
